# c-bindings

./: .depend  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  _r_e_a_d_m_e_8md.html  all_nodes.rb  alloc.c  alloc.h  annotated.html  annotated_dup.js  api.c  api.h  api_8h.html  api_8h.js  api_8h_source.html  benchmark.c  bindings.c  blobs.h  bytes.c  bytes.h  bytes_8h.html  bytes_8h.js  bytes_8h_source.html  classes.html  comment.c  comment.h  comment_8h.html  comment_8h.js  comment_8h_source.html  declare_blob.h  decoded__input_8h.html  decoded__input_8h.js  decoded__input_8h_source.html  decoded_input.c  decoded_input.h  decoder.c  decoder.h  decoder_8h.html  (+922 more)
.github/workflows/: benchmark.yml  doxygen.yml  release.yml  test.yml
benchmark/: benchmark.c  build.mk  download_asset.rb  lib-ruby-parser.c  measure.h  rb_filelist.h
codegen/: CMakeLists.txt  Cargo.toml  build.mk  build.rs  messages.h.liquid  messages.rs.liquid  nodes.h.liquid  nodes.rs.liquid  token_ids.h.liquid
codegen/codegen/: bindings_h.rs  bindings_messages_c.rs  bindings_nodes_c.rs  blobs_gen_h.rs  fns.rs  fns_c.rs  fns_shared.rs  message_rs.rs  messages.c.liquid  messages.h.liquid  messages.rs.liquid  messages_c.rs  messages_h.rs  messages_test.c.liquid  mod.rs  node_rs.rs  nodes.c.liquid  nodes.h.liquid  nodes_c.rs  nodes_h.rs  nodes_test.c.liquid  sizes_gen_h.rs
codegen/examples/: build_token_ids.rs  merge_headers.rs
fuzzer/: CMakeLists.txt  build.mk  parse.c
header/: build.mk  build.sh
includes/: comment.h  custom_decoder.c  custom_decoder.h  diagnostic.h  lib-ruby-parser.h  loc.h  magic_comment.c  magic_comment.h  node.h  node_list.h  parser_options.h  parser_result.h  range.h  token.c  token.h  token_rewriter.h  types.h
lib-ruby-parser-c-bindings/: CMakeLists.txt  Cargo.toml  build.mk  build.rs  cbindgen.toml
lib-ruby-parser-c-bindings/src/: allocator.rs  bindings.rs  byte_list.rs  clone.rs  comment.rs  containers.rs  custom_decoder.rs  diagnostic.rs  diagnostic_message.rs  diagnostic_payload.rs  fmt.rs  free.rs  from_c.rs  lib.rs  list.rs  loc.rs  magic_comment.rs  node.rs  node_gen.rs  parse.rs  parse_result.rs  parser_options.rs  parser_result.rs  ptr.rs  ptr_unptr.rs  range.rs  string_ptr.rs  to_c.rs  token.rs  token_rewriter.rs
ruby-parser-c/: CMakeLists.txt  Cargo.toml  build.mk  cbindgen.toml
ruby-parser-c/src/: bytes.rs  comment.rs  decoded_input.rs  decoder.rs  diagnostic.rs  external_allocator.rs  lib.rs  loc.rs  magic_comment.rs  parser_options.rs  parser_result.rs  shared_byte_list.rs  source_line.rs  string.rs  token.rs  token_rewriter.rs
scripts/: add_objects_to_lib.sh  add_to_lib.mk  build-headers  build_c_exe.mk  build_c_obj.mk  compile_obj.sh  detect_build_env.mk  detect_os.mk  download_file.rb  merge-static-libs-darwin.sh  merge-static-libs-linux.sh  merge-static-libs-windows.sh  rebuild-static-lib.sh  setup_ccflags.mk  setup_rustflags.mk  setup_target.mk  static-lib-to-object-darwin.sh  static-lib-to-object-linux.sh  static-lib-to-object-windows.sh  update-depend.sh
scripts/targets/: aarch64-apple-darwin.mk  x86_64-apple-darwin.mk  x86_64-pc-windows-gnu.mk  x86_64-pc-windows-msvc.mk  x86_64-unknown-linux-gnu.mk
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  (+40 more)
src/: CMakeLists.txt  alloc.h  api.c  api.h  build.mk  comment.c  comment.h  custom_decoder.c  custom_decoder.h  decoded_input.h  diagnostic.c  diagnostic.h  diagnostic_message.h  free.c  input.h  lib-ruby-parser.h  loc.c  loc.h  magic_comment.c  magic_comment.h  node.c  node.h  node_list.c  node_list.h  parser_options.h  parser_result.c  parser_result.h  range.c  rust_free.h  shared_byte_list.c  shared_byte_list.h  source_line.c  string.c  token.c  token.h  token_rewriter.c  token_rewriter.h  types.h
test/: build.mk  test.c
tests/: CMakeLists.txt  api_test.c  build.mk  bytes_test.c  comment_test.c  decoded_input_test.c  decoder_test.c  diagnostic_test.c  loc_test.c  magic_comment_test.c  parser_options_test.c  parser_result_test.c  runner.c  shared_byte_list_test.c  source_line_test.c  string_test.c  test.c  token_rewriter_test.c  token_test.c
utils/: copy_string.h  rb_filelist.h
