[package]
edition = "2018"
name = "codegen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["lib-ruby-parser-bindings", "lib-ruby-parser-nodes"]

[build-dependencies]
lib-ruby-parser-bindings = {version = "0.13.0", optional = true}
lib-ruby-parser-nodes = {version = "0.38.0", optional = true}
