[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
edition = "2018"
name = "lib-ruby-parser-c-bindings"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
lib-ruby-parser = {version = "0.4.0", features = ["onig"]}

[build-dependencies]
bindgen = "0.53.1"
lib-ruby-parser-nodes = "0.2.0"
