[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
edition = "2018"
name = "lib-ruby-parser-c-bindings"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[features]
default = []

generate-bindings = ["bindgen", "lib-ruby-parser-nodes"]

onig = ["lib-ruby-parser/onig"]

[dependencies]
lib-ruby-parser = "=3.0.0-7"

[build-dependencies]
bindgen = {version = "0.53.1", optional = true}
lib-ruby-parser-nodes = {version = "0.11.0", optional = true}
