[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
edition = "2018"
name = "lib-ruby-parser-c-bindings"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[features]
default = []

onig = ["lib-ruby-parser/onig"]

[dependencies]
lib-ruby-parser = {version = "3.0.4", features = ["c-structures"]}

[profile.dev]
panic = "abort"

[profile.release]
debug-assertions = false
incremental = false
lto = true
overflow-checks = false
panic = "abort"
